# core-banking-sim

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  build  core_banking_sim.py  devbox.json  gen_seed_data.py  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  seed.csv  seed.py  seed_data.py  t  x
.devcontainer/: devcontainer.json  post_create.sh  post_start.sh
.github/workflows/: build_image.yaml
core_banking/: __init__.py  eventing.py  ledger.py  models.py
k8s/base/: deployment.yaml  kustomization.yaml
k8s/envs/pie/: kustomization.yaml
tests/: conftest.py  test_benchmarks.py  test_core_banking_sim.py
