[tool.poetry]
name = "core-banking-sim"
version = "0.1.0"
description = "Cookiecutter template for generic Python 3 project with tooling configuration for testing, linting and IDE support"
authors = ["Li Lin <guru.lin@gmail.com>"]
license = "MIT"

# this section contains all dependencies required to run unit and integration tests
# not just dependencies requied for lambda runtime
[tool.poetry.dependencies]
python = "^3.11.1"
pytest = "^7.2"
pytest-mock = "^3.10"
pytest-cov = "^4.0"
fastapi = "0.103.2"
uvicorn = "0.23.2"
pytest-asyncio = "^0.20"
fastapi-utils = "^0.2.1"
mypy = "0.991"
python-ulid = "^1.1.0"
python-multipart = "^0.0.5"
boto3 = "^1.26.50"
nats-py = "^2.2.0"
httpx = "^0.23.3"
redis-om = "^0.2.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# formatting, linting
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "0.3.6"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-debugger = "^4.0.0"
flake8-fixme = "^1.1.1"
flake8-isort = "^4.1.1"
flake8-variables-names = "^0.0.4"
isort = "^5.10.1"
pre-commit = "^2.17.0"
types-setuptools = "^57.4.8"
types-toml = "^0.10.3"
types-redis = "^4.4.0"
fakeredis = "^2.4.0"
types-boto3 = "^1.0.2"
gprof2dot = "^2022.7.29"
scalene = "^1.5.31.1"

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["."]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]
